--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ img{
     height: 300px;
     width: 300px;
     border: 10px solid beige;
-    margin-left: 30%;
+    margin: 0 auto;
 }
 h1{
     color: white;
