--- a/style.css
+++ b/style.css
@@ -30,8 +30,6 @@ h3{
     display: flex;
     justify-content: center;
 }
-#sec{
-    font-weight: 500;
-    font-size: 28px;
-    position: absolute;
+a{
+    text-align: center;
 }
